--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,8 @@ __pycache__
 GUIA_POSIBLES_ANALITICAS.txt
 google_sheets_credentials
 config.toml
-*Club*.csv
+CSV
 myenv
+XLSX
+*.pbix
+work_in_progress
